--- a/app/src/main/res/layout/fragment_no_permission.xml
+++ b/app/src/main/res/layout/fragment_no_permission.xml
@@ -14,6 +14,7 @@
         android:text="@string/no_permissions" />
 
     <Button
+        android:id = "@+id/go_to_settings_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
